# NSU-opp

./: CMakeLists.txt  SLAE.cpp  SLAE_MPI.cpp  Скрипт для MPI программы.txt  Скрипт для последовательной программы.txt
